--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -33,9 +33,11 @@ dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/JavaNewProject
 excludes=
+file.reference.mysql-connector-j-8.0.32.zip=G:\\images\\mysql-connector-j-8.0.32.zip
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${file.reference.mysql-connector-j-8.0.32.zip}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
